fixed text wrap for about

--- a/portfolio.css
+++ b/portfolio.css
@@ -97,7 +97,7 @@ a:visited, a:link {
 .header-text.active {
   /* background-color: #232427; */
   /* color: green; */
-  font-weight: bold;
+  /* font-weight: bold; */
   text-decoration: underline;
 }
 
@@ -203,6 +203,13 @@ a:visited, a:link {
 .about-box {
   padding-top: 5%;
   overflow-wrap: break-word;
+}
+
+.indent-text {
+  margin: 0.5px 0 2px 2em;
+  font-size: 0.9em;
+  font-family: 'Courier New', Courier, monospace;
+  white-space: normal;
 }
 
 .about-title{
